<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColour"
    tools:context="floodit.s4923268.floodit_app.InstructionsActivity">

    <Button
        android:id="@+id/button4"
        android:layout_width="187dp"
        android:layout_height="75dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="368dp"
        android:background="@color/btnBackground"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/play_now_button"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="349dp"
        android:layout_height="167dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="28dp"
        android:fontFamily="monospace"
        android:text="@string/instructions"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.3"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/instructions_title"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="337dp"
        android:layout_height="90dp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="19dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="1dp"
        android:fontFamily="monospace"
        android:text="@string/more_instructions"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>

</android.support.constraint.ConstraintLayout>
